update event creation modal to have better input

--- a/app/globals.css
+++ b/app/globals.css
@@ -142,3 +142,7 @@
 .firebase-emulator-warning {
   display: none;
 }
+
+input[type="time"]::-webkit-calendar-picker-indicator {
+  background: none;
+}
