--- a/app/globals.css
+++ b/app/globals.css
@@ -123,6 +123,11 @@
   }
 }
 
+/* Hide scrollbar for Chrome, Safari and Opera */
+*::-webkit-scrollbar {
+  display: none;
+}
+
 @layer utilities {
 
   /* Hide scrollbar for Chrome, Safari and Opera */
